# DespertarME

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  inst_user_settings.tmp  kit-config-patched.json  pyproject.toml  railway.json  template_prompt_inicio.md  validacion-sesion-fable5-home-winamax.md
.githooks/: pre-commit
.opencode/skills/code-review-and-quality/: SKILL.md
.opencode/skills/performance-optimization/: SKILL.md
alembic/: env.py
alembic/versions/: .gitkeep  0001_baseline.py  8df6f9297a34_add_sport_to_bout_subscriptions.py  a3657c6166f0_fase_2b_3_tablas_users_subscriptions_.py  f7a0001_devices_fase_7a_device_model_fcm.py
memoria/: arquitectura.md  bitacora.md  contexto.md  convenciones.md  decisiones.md  fases.md  fuentes-datos.md  handoff.md  plan-mvp-android-fable5.md  plan-mvp-ios.md  plan-tenis.md  plan-ui-redesign-winamax.md  ui-design-tokens.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile-expo/: .gitignore  eas.json
mobile-expo/android/: settings.gradle
mobile-kotlin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
mobile-kotlin/app/: build.gradle.kts  google-services.json
mobile-kotlin/gradle/: libs.versions.toml
mobile/android/app/: build.gradle
scripts/: gen_memoria_index.py  gen_playstore_icon.ps1  probe_espn.py  probe_tennis.py  seed_admin.py  setup-hooks.ps1
src/app/: config.py  main.py  scheduler.py
src/app/api/: __init__.py  schemas.py
src/app/auth/: dependencies.py  security.py  validators.py
src/app/common/: __init__.py  ids.py
src/app/db/: session.py
src/app/domain/: entities.py
src/app/engine/: __init__.py  estimator.py  poller.py  state.py
tests/: conftest.py  test_api.py  test_athletes.py  test_espn_ufc.py  test_estimator.py  test_events_route.py  test_health.py  test_notifiers.py  test_poller.py
tests/fixtures/: .gitkeep
(+93 files in other folders)
