[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avisador"
version = "0.1.0"
description = "Avisador de alertas deportivas en tiempo real (MMA/Boxeo/Tenis)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Avisador Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.28",
    "apscheduler>=3.10.4",
    "tenacity>=8.4",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.1,<5.0",
    "pyjwt>=2.10",
    "twilio>=9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "aiosqlite>=0.20",
    "fakeredis>=2.26",
]

[project.urls]
Homepage = "https://github.com/CHANGE/avisador"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["py.typed"]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C4", "SIM"]
ignore = ["E501", "B008"]  # E501 lo gestiona black; B008 es patrón estándar de FastAPI

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B011"]

[tool.ruff.format]
quote-style = "double"

# ===== Black =====
[tool.black]
line-length = 100
target-version = ["py312"]

# ===== pytest =====
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# ===== mypy =====
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src/app"]